--- a/src/common.blocks/modal.scss
+++ b/src/common.blocks/modal.scss
@@ -3,14 +3,12 @@
 
 .modal {
   @include mixins.sublayer;
-  height: max-content;
+  height: 100%;
   position: absolute;
   display: none;
   justify-content: center;
   background-color: $overlayBackground;
   z-index: 100;
-  padding-top: 5vh;
-  padding-bottom: 5vh;
 
   &_active {
     display: flex;
@@ -21,14 +19,16 @@
     @include mixins.flex(column);
     gap: $defaultPadding;
     background-color: $background;
-    min-height: 90vmin;
+    height: max-content;
+    margin-top: auto;
+    margin-bottom: auto;
     border-radius: 3rem;
     box-sizing: border-box;
     position: relative;
   }
 
   &__content {
-    flex-grow: 1;
+    flex-grow: 0.7;
   }
 
   &__title {
